--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-06-03  Erik Grinaker <erikg@codepoet.no>
+
+	* the vertical scrollbar in the main window is only shown
+	when needed
+
 2004-05-09  Erik Grinaker <erikg@codepoet.no>
 
 	* updated all references to the wired-networks.net domain
