split out data handlers into separate module

--- a/TODO
+++ b/TODO
@@ -15,6 +15,7 @@
 - import/export of .netrc files
 - use xpath for xml handling instead of plain dom?
 - add autosaving of files (needs a preference)
+- file saving should create directories if needed (when non-existant)
 
 0.4.x:
 - will introduce a gnome 2.6 dependency
