--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-06-06  Erik Grinaker <erikg@codepoet.no>
+
+	* split out data handlers into separate modules
+
 2004-06-03  Erik Grinaker <erikg@codepoet.no>
 
 	* the vertical scrollbar in the main window is only shown
