dialogs subclassed from dialog.Dialog can be closed with the Escape key

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-06-11  Erik Grinaker <erikg@codepoet.no>
+
+	* most dialogs can now be closed by pressing Escape
+
 2004-06-10  Erik Grinaker <erikg@codepoet.no>
 
 	* fixed a bug introduced in yesterday's cleanups, which
