--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-06-29  Erik Grinaker <erikg@codepoet.no>
+
+	* miscellaneous code cleanups
+
 2004-06-22  Erik Grinaker <erikg@codepoet.no>
 
 	* rewrote internal data handling routines to use an Entry
