--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-07-10  Erik Grinaker <erikg@codepoet.no>
+
+	* rewrote the data file handling, and cleaned up the
+	data handlers
+
 2004-07-09  Erik Grinaker <erikg@codepoet.no>
 
 	* rewrote the Undo/Redo code, and moved most of it into the
