--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-07-27  Erik Grinaker <erikg@codepoet.no>
+
+	* rewrote the app configuration handling
+
 2004-07-15  Erik Grinaker <erikg@codepoet.no>
 
 	* when adding an entry the default type is Generic (not Folder)
