--- a/TODO
+++ b/TODO
@@ -23,6 +23,7 @@
 - use themed icons when possible
 - make the EntryDropdown display the icon on the button as well as
   in the menu
+- restructure the configuration layout
 - use a combo box for the username field
 - use a fileentry widget for file fields (key file, certificate)
 - use a spin button for integer fields (port)
