--- a/ChangeLog
+++ b/ChangeLog
@@ -2,11 +2,13 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-08-08  Erik Grinaker <erikg@codepoet.no>
+
+	* merged the ui module into the widget module
+
 2004-08-07  Erik Grinaker <erikg@codepoet.no>
 
 	* minor code cleanups
-
-	* merged the ui module into the widget module
 
 2004-08-06  Erik Grinaker <erikg@codepoet.no>
 
