--- a/TODO
+++ b/TODO
@@ -9,6 +9,8 @@
   be atomic (can't call add_entry() etc directly, since it triggers
   the signal repeatedly)
 - quicksearch entry in the toolbar
+- add import/export of PasswordSafe files
+- bug: entry-description aren't stored in the entry object
 
 0.4.x:
 - will introduce a gnome 2.6 dependency
