--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@ Revelation changelog
 	* added an exception handler which displays a dialog with
 	a tracebacck whenever an unhandled exception occurs
 
+	* fixed a bug in the edit entry dialog which caused entry
+	description to not be set
+
 
 ---------------[ 2004-08-09 : 0.3.2 ]---------------
 
