--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@ Revelation changelog
 
 	* added initial launcher support
 
+	* added exception handler for KeyboardInterrupt (Control-C)
+
 
 ---------------[ 2004-08-09 : 0.3.2 ]---------------
 
