--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.3 ]---------------
 
+2004-08-11  Erik Grinaker <erikg@codepoet.no>
+
+	* minor tweaks to launcher code
+
 2004-08-10  Erik Grinaker <erikg@codepoet.no>
 
 	* added an exception handler which displays a dialog with
