--- a/TODO
+++ b/TODO
@@ -1,14 +1,15 @@
 0.3.x:
-- password strength check (cracklib?)
 - option for autolocking the file after a period of inactivity
 - export to XHTML/CSS files
 - add a "changed" signal to the EntryStore - requires all methods to
   be atomic (can't call add_entry() etc directly, since it triggers
   the signal repeatedly)
 - add import/export of PasswordSafe files
+- make entry type subclasses instead of using dicts for data
 
 0.4.x:
 - will introduce a gnome 2.6 dependency
+- use autotools for installation
 - gnome integration (gnome-vfs, session management, recent docs etc)
 - add support for "copy username/password to clipboard", useful when
   hiding the passwords
@@ -29,6 +30,7 @@
 - add info about file as cmdline-arg in --help text
 - string cleanups
 - don't use modal dialogs unless absolutely necessary
+- password strength check - build python-crack as part of revelation
 
 0.5.x:
 - remove support for version 0 data files
