--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.3 ]---------------
 
+2004-08-24  Erik Grinaker <erikg@codepoet.no>
+
+	* changed some launcher substitution variables
+
 2004-08-23  Erik Grinaker <erikg@codepoet.no>
 
 	* changed the accelerators for adding, editing and removing
