--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.3 ]---------------
 
+2004-08-29  Erik Grinaker <erikg@codepoet.no>
+
+	* renamed the XML (eXtensible Markup Language) filetype to XML
+
 2004-08-28  Erik Grinaker <erikg@codepoet.no>
 
 	* improved the xhtml exporter
