--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 Revelation changelog
 
----------------[ xxxx-xx-xx : 0.3.3 ]---------------
+---------------[ 2004-08-30 : 0.3.3 ]---------------
+
+2004-08-30  Erik Grinaker <erikg@codepoet.no>
+
+	* bumped version number to 0.3.3
 
 2004-08-29  Erik Grinaker <erikg@codepoet.no>
 
