--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+xxxx-xx-xx: Revelation 0.4.0
+============================
+
+New features:
+- use new file dialog from gtk+ 2.4
+
+
 2004-08-30: Revelation 0.3.3
 ============================
 
