--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ xxxx-xx-xx: Revelation 0.4.0
 New features:
 - use new file dialog from gtk+ 2.4
 
+Code changes:
+- reorganized source file tree
+
 
 2004-08-30: Revelation 0.3.3
 ============================
