--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ New features:
 
 Code changes:
 - reorganized source file tree
+- use GNU autotools for installation instead of python distutils
 
 
 2004-08-30: Revelation 0.3.3
