first try pythonpath from configure

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0 ]---------------
 
+2004-08-31  Erik Grinaker <erikg@codepoet.no>
+
+	* try libs in pythonpath from configure first
+
 2004-08-30  Erik Grinaker <erikg@codepoet.no>
 
 	* use new file dialog from GTK+ 2.4
