use base filename as icon name in .desktop file

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,9 @@ Revelation changelog
 	* fixed a bug where the domain field tooltip was used as the
 	field name
 
+	* the .desktop file now uses the base icon name, so it is
+	looked up in the icon theme
+
 2004-09-05  Erik Grinaker <erikg@codepoet.no>
 
 	* renamed data/images to data/icons
