--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+xxxx-xx-xx: Revelation 0.3.4
+============================
+
+Bugfixes:
+- the Domain field had the tooltip set as its name
+
+
 2004-08-30: Revelation 0.3.3
 ============================
 
