--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,12 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0 ]---------------
 
-2004-09-06  Erik Grinaker <erikg@codepoet.no>
+2004-09-11  Erik Grinaker <erikg@codepoet.no>
+
+	* the gconf schema check didn't use the DIR_GCONFSCHEMAS
+	variable
+
+2004-09-09  Erik Grinaker <erikg@codepoet.no>
 
 	* use new ConboBox widget for dropdown menus
 
