--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,15 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0 ]---------------
 
+2004-10-30  Erik Grinaker <erikg@codepoet.no>
+
+	* rewrote the Revelation and RevelationXML data handlers
+
+	* changed the data handler API
+
+	* added unit tests for the Revelation and RevelationXML
+	data handlers
+
 2004-10-23  Erik Grinaker <erikg@codepoet.no>
 
 	* added util module, moved alot of code to it, and rewrote
