--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,12 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0 ]---------------
 
+2004-11-26  Erik Grinaker <erikg@codepoet.no>
+
+	* rewrote the data module
+
+	* wrote unit tests for the data module
+
 2004-11-23  Erik Grinaker <erikg@codepoet.no>
 
 	* split configuration handling into a separate module
