--- a/TODO
+++ b/TODO
@@ -9,6 +9,9 @@
 - option for autolocking the file after a period of inactivity
 - sorting of the tree
 - update documentation
+- monitor file for changes
+- gnome panel applets (account lookup, password generator etc)
+  - show complete account tree as a popup-submenu of the applet
 
 0.5.x:
 - remove support for version 0 data files
@@ -20,9 +23,10 @@
   - sha-256 password hashing
   - 10k password hash iterations
   - add note / comment field to accounts
+  - add remote desktop account type
+  - clean up the account types
+  - possibility for custom account types
 - file merging (union - this *really* need unique entry ids)
-- gnome panel applets (account lookup, password generator etc)
-  - show complete account tree as a popup-submenu of the applet
 - accessibility improvements
 - help / documentation
 - internationalization
