updated the data module unit tests

--- a/TODO
+++ b/TODO
@@ -12,6 +12,7 @@
 - monitor file for changes
 - gnome panel applets (account lookup, password generator etc)
   - show complete account tree as a popup-submenu of the applet
+- bugfix: fall back to False for /desktop/gnome/interface/toolbar_detachable
 
 0.5.x:
 - remove support for version 0 data files
@@ -26,6 +27,7 @@
   - add remote desktop account type
   - clean up the account types
   - possibility for custom account types
+  - add "note" entry type
 - file merging (union - this *really* need unique entry ids)
 - accessibility improvements
 - help / documentation
