--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0 ]---------------
 
+2004-12-31  Erik Grinaker <erikg@codepoet.no>
+
+	* updated the data module unit tests with new API
+
+
 2004-12-21  Erik Grinaker <erikg@codepoet.no>
 
 	* improved the main app class API
