more ui module unit tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@ Revelation changelog
 
 2005-01-07  Erik Grinaker <erikg@codepoet.no>
 
+	* wrote more ui module unit tests (yawn)
+
+2005-01-07  Erik Grinaker <erikg@codepoet.no>
+
 	* wrote more ui module unit tests
 
 2005-01-06  Erik Grinaker <erikg@codepoet.no>
