fixed a couple of io module unit tests

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@ Revelation changelog
 	* on entry goto, the username isn't copied to the clipboard chain
 	if the username is given to the goto command
 
+	* fixed a couple of io unit tests
+
 2005-01-08  Erik Grinaker <erikg@codepoet.no>
 
 	* wrote more ui module unit tests (yawn)
