--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,15 @@
 Revelation changelog
 
----------------[ 2005-01-24: 0.4.0-pre1 ]---------------
+---------------[ xxxx-xx-xx : 0.4.0-pre2 ]---------------
+
+2005-01-25  Erik Grinaker <erikg@codepoet.no>
+
+	* build authmanager module with position-independent code
+
+	* don't install authmanager into bindir
+
+
+---------------[ 2005-01-24 : 0.4.0-pre1 ]---------------
 
 2005-01-24  Erik Grinaker <erikg@codepoet.no>
 
