--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ xxxx-xx-xx: Revelation 0.4.0-pre2
 =================================
 
 Bugfixes:
+- place Revelation under Accessories in the GNOME menu (Utility category)
 - build authmanager module with position-independent code
 - don't install authmanager module into bindir
 
