--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,9 @@ Bugfixes:
 - build authmanager module with position-independent code
 - don't install authmanager module into bindir
 
+Code changes:
+- updated unit tests for ui module
+
 
 2005-01-24: Revelation 0.4.0-pre1
 =================================
