fixed a tree dragndrop bug which broke dragging to folders directly before/after the source entry

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,9 @@ Revelation changelog
 
 	* wrote more ui module unit tests
 
+	* fixed a treeview drag'n'drop bug which broke dropping into
+	folders directly before or after the source entry
+
 
 ---------------[ 2005-01-24 : 0.4.0-pre1 ]---------------
 
