--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Bugfixes:
 - build authmanager module with position-independent code
 - don't install authmanager module into bindir
 - install mimetype icon into correct directory
+- run update-desktop-database on install, to register app for mimetype
 - allow entry drag'n'drop to folder directly before/after entry
 
 Code changes:
