--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-0.4.x:
+.4.x:
 - string cleanups
 - don't use modal dialogs unless absolutely necessary
 - password strength check - build python-crack as part of revelation
@@ -37,7 +37,7 @@
 - recent docs
 - use gnome_authentication_manager_init() from gnome-python when
   available
-- port to gtk+ 2.6
+- port to gtk+ 2.6 / gnome 2.10
   - gtk.AboutDialog
 - HIG review
 
