--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@ Revelation changelog
 
 	* added plain text datahandler
 
+	* treeview keyboard commands caused unhandled exception
+
 
 ---------------[ 2005-02-01 : 0.4.0-pre2 ]---------------
 
