--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ New features:
 Bugfixes:
 - treeview keyboard commands caused unhandled exception
 - set default button for overwrite dialog to cancel
+- build byte-compiled datahandler modules
 
 
 2005-02-01: Revelation 0.4.0-pre2
